new approach to do all CSS and JS first

--- a/index.html
+++ b/index.html
@@ -22,6 +22,30 @@
     </header>
 
     <main>
+        <section>
+            <h2 class='score-display'>You have slain this many goblins</h2>
+        </section>
+        <div class="challenge">
+            <input class="goblin-input">
+            <button class="goblin-button">Add Challenger 😈</button>
+        </div>
+        <div class="game-body">
+            <section class="player-stats">
+                <div>
+                    <p class="player-health">Player Health</p>
+                    <p class="player-avatar">Player Avatar</p>
+                </div>
+            </section>
+
+            <section class="goblin-list">
+                <div class="goblin">goblin 1</div>
+                <div class="goblin">goblin 1</div>
+                <div class="goblin">goblin 1</div>
+                
+            </section>
+        </div>
+
+
 
     </main>
 
