added function to render goblins

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
 <body>
     <header>
-        <img src="/assets/html_css_js.png">
-        <h1>Web App</h1>
+
     </header>
 
     <main>
@@ -26,6 +25,8 @@
             <h2 class='score-display'>You have slain this many goblins</h2>
         </section>
         <div class="challenge">
+            <input class="user-input">
+            <button class="user-button">Your Name</button>
             <input class="goblin-input">
             <button class="goblin-button">Add Challenger 😈</button>
         </div>
@@ -38,9 +39,6 @@
             </section>
 
             <section class="goblin-list">
-                <div class="goblin">goblin 1</div>
-                <div class="goblin">goblin 1</div>
-                <div class="goblin">goblin 1</div>
                 
             </section>
         </div>
