update score when goblin is slain + player HP and avatar updates upon getting hit

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <main>
         <section>
-            <h2 class='score-display'>You have slain this many goblins</h2>
+            <h2 class='score-display'></h2>
         </section>
         <div class="challenge">
             <input class="user-input">
@@ -33,8 +33,8 @@
         <div class="game-body">
             <section class="player-stats">
                 <div>
-                    <p class="player-health">Player Health</p>
-                    <p class="player-avatar">Player Avatar</p>
+                    <p class="player-health">HP: (1)</p>
+                    <p class="player-avatar">🧙‍♂️</p>
                 </div>
             </section>
 
